<resources>
    <string name="app_name">Manager\'s Tools </string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_login">Login ou mot de passe incorrect</string>
    <string name="login_failed">"Echec de Connexion "</string>
    <string name="title_activity_mobile_navigation">mobile_navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="classe">CLASSE</string>
    <string name="etudiant">ETUDIANT</string>
    <string name="mail">MAIL</string>
    <string name="sms">SMS</string>
</resources>