<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_classe"
            android:icon="@mipmap/ic_group"
            android:title="@string/classe"/>

        <item
            android:id="@+id/nav_etudiant"
            android:icon="@mipmap/ic_perso"
            android:title="@string/etudiant"/>

        <item
            android:id="@+id/nav_mail"
            android:icon="@mipmap/ic_mail"
            android:title="@string/mail"/>

        <item
            android:id="@+id/nav_sms"
            android:icon="@mipmap/ic_sms"
            android:title="@string/sms"/>
    </group>
</menu>